<resources>
    <string name="app_name">Morning Kit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="loading">Loading…</string>
    <string name="default_string">Default</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="no_network_connection">No Network Connection</string>
    <string name="searching">Searching…</string>
    <string name="done">Done</string>
    <string name="open">open</string>
    <string name="add_an_alarm">Add Alarm</string>
    <string name="edit_alarm">Edit Alarm</string>
    <string name="alarm_default_label">Alarm</string>
    <string name="alarm_am">AM</string>
    <string name="alarm_pm">PM</string>
    <string name="alarm_snooze_string">Your alarm will start again in 9 minutes</string>
    <string name="alarm_set_toast_part1">Alarm set for </string>
    <string name="alarm_set_toast_part2">from now</string>
    <string name="alarm_day"> day </string>
    <string name="alarm_days"> days </string>
    <string name="alarm_hour"> hour </string>
    <string name="alarm_hours"> hours </string>
    <string name="alarm_minute"> minute </string>
    <string name="alarm_minutes"> minutes </string>
    <string name="alarm_pref_repeat">Repeat</string>
    <string name="alarm_pref_sound_type">Sound</string>
    <string name="alarm_pref_label">Label</string>
    <string name="alarm_pref_repeat_never">Never</string>
    <string name="alarm_pref_repeat_weekdays">Weekdays</string>
    <string name="alarm_pref_repeat_weekends">Weekends</string>
    <string name="alarm_pref_repeat_everyday">Everyday</string>
    <string name="alarm_pref_pick_your_favorite_song">Pick a song</string>
    <string name="every_monday">Every Monday</string>
    <string name="every_tuesday">Every Tuesday</string>
    <string name="every_wednesday">Every Wednesday</string>
    <string name="every_thursday">Every Thursday</string>
    <string name="every_friday">Every Friday</string>
    <string name="every_saturday">Every Saturday</string>
    <string name="every_sunday">Every Sunday</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="monday_short">M</string>
    <string name="tuesday_short">T</string>
    <string name="wednesday_short">W</string>
    <string name="thursday_short">T</string>
    <string name="friday_short">F</string>
    <string name="saturday_short">S</string>
    <string name="sunday_short">S</string>
    <string name="alarm_wake_snooze">Snooze</string>
    <string name="alarm_wake_dismiss">Dismiss</string>
    <string name="alarm_sound_string_none">Mute</string>
    <string name="alarm_sound_string_vibrate">Vibrate</string>
    <string name="alarm_sound_string_ringtones">Ringtone</string>
    <string name="alarm_sound_string_music">Music</string>
    <string name="alarm_ocean_short">Ocean</string>
    <string name="alarm_ride">Ride</string>
    <string name="world_clock">World Clock</string>
    <string name="flickr">Flickr</string>
    <string name="memo">Memo</string>
    <string name="date_calculator">Date\nCountdown</string>
    <string name="weather">Weather</string>
    <string name="calendar">Date</string>
    <string name="exchange_rate">Exchange\nRates</string>
    <string name="saying">Quotes</string>
    <string name="reminder">Calendar</string>
    <string name="calendar_lunar_calendar">Lunar Calendar</string>
    <string name="calendar_monday">MONDAY</string>
    <string name="calendar_tuesday">TUESDAY</string>
    <string name="calendar_wednesday">WEDNESDAY</string>
    <string name="calendar_thursday">THURSDAY</string>
    <string name="calendar_friday">FRIDAY</string>
    <string name="calendar_saturday">SATURDAY</string>
    <string name="calendar_sunday">SUNDAY</string>
    <string name="flickr_not_available_flickr_url">No Results Found</string>
    <string name="flickr_search_images">Search for Image</string>
    <string name="flickr_use_gray_scale">Use Grayscale</string>
    <string name="flickr_save_to_library_guide">This photo will be saved in your library</string>
    <string name="flickr_photo_saved">The Photo Saved</string>
    <string name="flickr_normal_quality">Standard</string>
    <string name="flickr_high_quality">High Resolution</string>
    <string name="flickr_error_access_server">Error in access to flickr server</string>
    <string name="date_countdown_date">Date</string>
    <string name="date_countdown_countdown">Countdown</string>
    <string name="date_countdown_new_year">New Year</string>
    <string name="date_countdown_write_a_title">Label</string>
    <string name="date_countdown_create_countdown">Create a Countdown</string>
    <string name="weather_temperature_unit">Temperature Unit</string>
    <string name="weather_use_current_location">Use Your Current Location</string>
    <string name="weather_current_location">Current Location</string>
    <string name="weather_search_city">Search for City (in English)</string>
    <string name="display_local_time">Display Local Time</string>
    <string name="weather_choose_your_city">Choose your City</string>
    <string name="world_clock_clock_type_text">Clock Type</string>
    <string name="world_clock_digital">Digital</string>
    <string name="world_clock_analog">Analog</string>
    <string name="world_clock_use_24_hour_format">Use 24-hour format</string>
    <string name="world_clock_today">Today</string>
    <string name="world_clock_tomorrow">Tomorrow</string>
    <string name="world_clock_yesterday">Yesterday</string>
    <string name="exchange_rate_switch_countries">Swap currencies</string>
    <string name="exchange_rate_main_currencies">Top currencies</string>
    <string name="exchange_rate_all_currencies">All currencies</string>
    <string name="memo_write_here">Write a memo</string>
    <string name="memo_write_here_modal">Write here</string>
    <string name="memo_end_of_page_halt">End-of-Page</string>
    <string name="quotes_copy">Copy</string>
    <string name="reminder_no_schedule">No events today</string>
    <string name="reminder_birthday">Birthday</string>
    <string name="reminder_event">Event</string>
    <string name="reminder_all_day">All-Day</string>
    <string name="info_store">Store</string>
    <string name="info_help">Help</string>
    <string name="info_credit">Credits</string>
    <string name="info_yooii_connector">Yooii Connector</string>
    <string name="tab_widget">PANEL</string>
    <string name="tab_alarm">ALARM</string>
    <string name="tab_setting">Setting</string>
    <string name="tab_theme">THEME</string>
    <string name="tab_info">INFO</string>
    <string name="setting_language">Language</string>
    <string name="setting_widgettable">Panel Matrix</string>
    <string name="setting_theme_color">Theme</string>
    <string name="setting_theme_color_skyblue">Celestial (Sky blue)</string>
    <string name="setting_theme_color_classic_gray">Slate (Gray)</string>
    <string name="setting_theme_color_classic_white">Modernity (Chic white)</string>
    <string name="setting_theme_mirror">Reflection (Mirror)</string>
    <string name="setting_theme_scenery">Tranquility (Transparent)</string>
    <string name="setting_theme_photo">Photo</string>
    <string name="setting_theme_photo_portrait">Photo (Portrait)</string>
    <string name="setting_theme_photo_landscape">Photo (Landscape)</string>
    <string name="setting_language_korean">한국어</string>
    <string name="setting_language_english">English</string>
    <string name="setting_language_japanese">日本語</string>
    <string name="setting_language_simplified_chinese">简体中文</string>
    <string name="setting_language_traditional_chinese">繁體中文</string>
    <string name="setting_language_russian">Русский</string>
    <string name="setting_language_spanish">Español</string>
    <string name="setting_language_french">Français</string>
    <string name="setting_language_deutsch">Deutsch</string>
    <string name="setting_language_portuguese_brazil">Português (Brasil)</string>
    <string name="setting_language_portuguese_portugal">Português (Portugal)</string>
    <string name="setting_language_portuguese_italian">Italiano</string>
    <string name="setting_effect_sound">Sound Effects</string>
    <string name="setting_effect_sound_on">On</string>
    <string name="setting_effect_sound_off">Off</string>
    <string name="tutorial_select_theme">Select your Morning Theme</string>
    <string name="tutorial1_label1">You can customize Panels</string>
    <string name="tutorial1_label2">You can add or edit Alarms</string>
    <string name="tutorial1_label3">Swipe to delete Alarms</string>
    <string name="tutorial1_label4">Refresh</string>
    <string name="tutorial1_label5">Settings</string>
    <string name="tutorial1_tap_screen">Tap the screen</string>
    <string name="tutorial1_skip_tutorial">Skip Tutorial</string>
    <string name="unlock_notice">NOTICE</string>
    <string name="unlock_unlocked">Unlocked</string>
    <string name="unlock_description">There are many ways to unlock this feature. Find a way to enjoy it for free!</string>
    <string name="unlock_description_highlight">unlock</string>
    <string name="unlock_everything">Unlock everything for only $2.99</string>
    <string name="unlock_everything_highlight">everything</string>
    <string name="unlock_only_this">Unlock for $0.99</string>
    <string name="unlock_review">Write a Review and unlock it for free!</string>
    <string name="unlock_review_highlight">Review</string>
    <string name="unlock_connector">Enable Yooii Connector and unlock it for free!</string>
    <string name="unlock_connector_highlight">Yooii Connector</string>
    <string name="unlock_use_morning">Use Morning Kit 10 times and unlock it for free!</string>
    <string name="unlock_use_morning_highlight">10 times</string>
    <string name="unlock_facebook">Like us on Facebook and unlock it for free!</string>
    <string name="unlock_facebook_highlight">Like</string>
    <string name="unlock_twitter">Follow us on Twitter and unlock it for free!</string>
    <string name="unlock_twitter_highlight">Follow</string>
    <string name="store_no_purchase_records">No purchase records</string>
    <string name="store_restore_purchases">Restore purchases</string>
    <string name="store_purchased">Purchased</string>
    <string name="store_restore">Restore</string>
    <string name="store_restore_success_message">All purchases are restored</string>
    <string name="store_buy_full_version">Buy the pro version!</string>
    <string name="store_buy_full_version_description">Upgrade to unlock all Functions, Panels, and Themes</string>
    <string name="store_tab_functions">Functions</string>
    <string name="store_tab_widgets">Panels</string>
    <string name="store_tab_themes">Themes</string>
    <string name="store_item_more_alarm_slots">More alarm slots</string>
    <string name="store_item_no_ads">No Ads</string>
    <string name="store_item_matrix">2 X 3 Matrix</string>
    <string name="store_item_widget_date_countdown">Date\nCountdown</string>
    <string name="store_item_widget_memo">Memo</string>
    <string name="store_item_widget_photo_album">Photo Frame</string>
    <string name="store_item_photo_portrait">Photo\nPortrait</string>
    <string name="store_item_photo_landscape">Photo\nLandscape</string>
    <string name="store_item_skyblue">Celestial\n(Sky blue)</string>
    <string name="no_search_result">No Results Found</string>
    <string name="photo_album_minute_hint">min</string>
    <string name="photo_album_minute">min</string>
    <string name="photo_album_second_hint">sec</string>
    <string name="photo_album_second">sec</string>
</resources>