<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/panel_photo_album_dialog_refresh_vertical_padding"
    android:paddingBottom="@dimen/panel_photo_album_dialog_refresh_vertical_padding"
    android:gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="bottom">
        <EditText
            android:id="@+id/minuteEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/panel_photo_album_dialog_refresh_item_horizontal_margin"
            android:textSize="@dimen/panel_photo_album_dialog_refresh_textSize"
            android:hint="@string/photo_album_minute_hint"
            android:gravity="center_horizontal"
            android:inputType="numberSigned"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/panel_photo_album_dialog_refresh_item_horizontal_margin"
            android:textSize="@dimen/panel_photo_album_dialog_refresh_textSize"
            android:textColor="@android:color/white"
            android:text="@string/photo_album_minute"/>
        <EditText
            android:id="@+id/secondEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/panel_photo_album_dialog_refresh_item_horizontal_margin"
            android:textSize="@dimen/panel_photo_album_dialog_refresh_textSize"
            android:hint="@string/photo_album_second_hint"
            android:gravity="center_horizontal"
            android:inputType="numberSigned"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/panel_photo_album_dialog_refresh_textSize"
            android:textColor="@android:color/white"
            android:text="@string/photo_album_second"/>
    </LinearLayout>
</LinearLayout>